packages/erika_flutter/native/include/erika.h

typedef struct ErikaGifExportOptions {
  const char *input_uri;
  const char *output_path;
  uint64_t start_millis;
  uint64_t end_millis;
  uint32_t frames_per_second;
  uint32_t output_width;
  uint32_t output_height;
  int32_t quality;
  int32_t loop_count;
  bool overwrite;
  const ErikaHttpHeader *headers;
  uintptr_t header_count;
  uint64_t http_read_ahead_bytes;
  uint64_t reserved[3];
} ErikaGifExportOptions;
typedef struct ErikaGifExportResult {
  uint32_t width;
  uint32_t height;
  uint64_t frame_count;
  uint64_t file_size;
} ErikaGifExportResult;
typedef enum ErikaStatus {
  ErikaStatus_Ok = 0,
  ErikaStatus_NullPointer = 1,
  ErikaStatus_InvalidUtf8 = 2,
  ErikaStatus_PlayerError = 3,
  ErikaStatus_Panic = 4,
  ErikaStatus_NoEvent = 5,
} ErikaStatus;
char *erika_last_error_message(void);
void erika_string_free(char *value);
ErikaStatus erika_export_gif(
    const ErikaGifExportOptions *options,
    ErikaGifExportResult *out_result);